// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Alert component renders error Alert component 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm iHdWFy"
    color="red"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`renders Alert component renders success Alert component 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm hHJyom"
    color="green"
  >
    Success!
  </div>
</DocumentFragment>
`;
